@@ -61,5 +61,6 @@ class Kernel extends HttpKernel
         'cache.headers' => \Illuminate\Http\Middleware\SetCacheHeaders::class,
         '2fa' => \PragmaRX\Google2FALaravel\Middleware::class,
         'locale' => \App\Http\Middleware\CheckLocale::class,
+        'auth.confirm' => \App\Http\Middleware\AuthEmailConfirm::class,
     ];
 }
