@@ -33,6 +33,10 @@ class SendNewUserAlert implements ShouldQueue
      */
     public function handle()
     {
-        Mail::to(config('monica.email_new_user_notification'))->send(new NewUserAlert($this->user));
+        $email = config('monica.email_new_user_notification');
+        if (! empty($email)) {
+            Mail::to($email)
+                ->send(new NewUserAlert($this->user));
+        }
     }
 }
