@@ -24,6 +24,7 @@ return [
     '2fa_recuperation_code' => 'Enter a two factor recovery code',
 
     'login_to_account' => 'Login to your account',
+    'login_again' => 'Please login again to your account',
     'email' => 'Email',
     'password' => 'Password',
     'login' => 'Login',
@@ -59,4 +60,9 @@ return [
     'register_policy' => 'Signing up signifies you’ve read and agree to our <a href=":url" hreflang=":hreflang">Privacy Policy</a> and <a href=":urlterm" hreflang=":hreflang">Terms of use</a>.',
     'register_invitation_email' => 'For security purposes, please indicate the email of the person who’ve invited you to join this account. This information is provided in the invitation email.',
 
+    'confirmation_again' => 'If you want to change your email address you can <a href=":url" class="alert-link">click here</a>.',
+    'email_change_current_email' => 'Current email address:',
+    'email_change_title' => 'Change your email address',
+    'email_change_new' => 'New email address',
+    'email_changed' => 'Your email address has been changed. Check your mailbox to validate it.',
 ];
